# Algo_fairness-Group-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Step7_SHAP_LocalInterpretability.ipynb  logit_top_coef.csv  pyproject.toml  requirements.txt  run_surrogates.py  step1 copy.ipynb  step2_xgboost_raph.ipynb  step8_permutation_pipeline.ipynb  tree_rules.txt
.github/workflows/: run_surrogates.yml
algo_fairness_project/: pyvenv.cfg
notebooks/: 00_data_exploration.ipynb  01_step1_surrogates_DP.ipynb  02_step2_train_blackbox.ipynb  03_Model_Stability_Analysis_Split.ipynb  04_step4_surrogates_ours.ipynb  06_step6_LIME_ICE.ipynb  07_step7_SHAP.ipynb  07_step7_SHAP_Zhipeng.ipynb  08_step8_permutation_pipeline.ipynb  09_step9_Ethnicity.ipynb  10_step10_FPDP_Analysis.ipynb  Step6_ICE_LIME.ipynb  step2_xgboost_raph.ipynb  step8_permutation_pipeline.ipynb
outputs_step2/: xgb_step2_meta.txt
outputs_step8/: baseline_metrics.json  permutation_importance.csv  step8_permutation_pipeline.ipynb
reports/artifacts/artifacts_step2/lightgbm/: features.json  lightgbm_model.txt  metrics.json
reports/artifacts/outputs_step8/: baseline_metrics.json  config.json
reports/figures/artifacts_step10/fpdp/: dependence_map.csv  fpdp_all_features.csv  fpdp_dti.csv  fpdp_funded_amnt.csv  fpdp_int_rate.csv  fpdp_issue_d.csv  fpdp_loan_duration.csv
reports/figures/artifacts_step10_2/textbook_fpdp/: fpdp_pvals_all.csv  fpdp_pvals_dti.csv  fpdp_pvals_funded_amnt.csv  fpdp_pvals_int_rate.csv  (+2 more)
reports/tables/: xgb_step2_test_predictions.csv
