[project]
name = "dataproject-2025"
version = "0.1.0"
description = "Pipeline: exploration, modèles, interprétabilité (PDP, LIME, SHAP…) "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "shap>=0.45",
  "lime>=0.2.0.1",
  "jupyterlab>=4.2",
  "ipykernel>=6.29"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]
